# NeuronSpikeEye

./: .gitignore  README.md  pyproject.toml  requirements.txt
batch_scripts/: batchjob.sh  create_env.sh
src/: plot_results.py
src/data/: count_CAP.py  create_simulated_data.py  data_statistics.py  data_utils.py  dataset_utils.py  make_dataset.py  precprocess_utils.py  preprocess_data.py  preprocess_utils.py  save_to_mat.py  utils.py
src/data/noise_files_sim_data/: 500_Hz.npy  CAP2.npy  SA_channel.npy  SA_time.npy  base_signal.npy  high_freq.npy  pli.npy
src/model/: baseline_counter.py  baseline_model.py  counter.py  counter_real.py  preprocess_data.py  rocket.py  run_wavelet_model.py  svm_model.py  wavelet_model.py  wavelet_optimi.py  wavelet_utils.py
src/model/robust_ntf/: clean_scalogram.py  foldings.py  matrix_utils.py  robust_ntf.py
src/visualizations/: CAP.ipynb  CPD.ipynb  SVR.ipynb  baseline_model.ipynb  data.ipynb  data_noise_types.ipynb  data_statistics.ipynb  detect_SA.ipynb  method_overview.ipynb  offset_problem.ipynb  preprocessing.ipynb  presentation.ipynb  qualitative_analysis.ipynb  real_data.ipynb  simulated_data.ipynb  wavelet_model.ipynb
